--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
       </header>
       <div class="cards">
         <div class="card card-supervisor">
-          <h4 class="card-title">Supervisor</h4>
+          <h3 class="card-title">Supervisor</h3>
           <p class="card-desc">Monitors activity to identify project roadblocks</p>
-          <img src="images/icon-supervisor.svg" class="card-icon" />
+          <img src="images/icon-supervisor.svg" alt="icon-supervisor" class="card-icon" />
         </div>
         <div class="collection-cards">
           <div class="card card-team-builder">
-            <h4 class="card-title">Team Builder</h4>
+            <h3 class="card-title">Team Builder</h3>
             <p class="card-desc">Scans our talent network to create the optimal team for your project</p>
-            <img src="images/icon-team-builder.svg" class="card-icon" />
+            <img src="images/icon-team-builder.svg" alt="icon-team-builde" class="card-icon" />
           </div>
           <div class="card card-karma">
-            <h4 class="card-title">Karma</h4>
+            <h3 class="card-title">Karma</h3>
             <p class="card-desc">Regularly evaluates our talent to ensure quality</p>
-            <img src="images/icon-karma.svg" class="card-icon" />
+            <img src="images/icon-karma.svg" alt="icon-karma.svg" class="card-icon" />
           </div>
         </div>
         <div class="card card-calculator">
-          <h4 class="card-title">Calculator</h4>
+          <h3 class="card-title">Calculator</h3>
           <p class="card-desc">Uses data from past projects to provide better delivery estimates</p>
-          <img src="images/icon-calculator.svg" class="card-icon" />
+          <img src="images/icon-calculator.svg" alt="icon-calculator.svg" class="card-icon" />
         </div>
       </div>
     </div>
